@@ -1,25 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST emacs-common-gentoo-1.3.tar.gz 46819 RMD160 40c12dd355c3fd80ad65d45190c4f3c7f2134ad6 SHA1 ff743a4646d493dd14ed1e812d3adfd6323498e9 SHA256 c874088b1d9833432e1da9c3e3f79e7891cb3af41bcdecb02aa299d207c0218d
-EBUILD emacs-common-gentoo-1.3.ebuild 3819 RMD160 3a6f3a6af77fe8453eaa90bf9490b6bd9b22401c SHA1 c58cfdae4691cc2f809c699084886b10b03183fe SHA256 0bac06f3adb3bc158055c7ac62fa64737ff51b01ee8a4201a96feb0eb759db9d
-EBUILD emacs-common-gentoo-9999.ebuild 3769 RMD160 02c29fe2aa2a56cb93df072778c5cf76d584e464 SHA1 0c242aff8b010afc83d7276798cb5bbbea909367 SHA256 719316e0eb8227e02b4c9ad2f1671a850c9d04dcb30b6df82e74f7301f7326f9
-MISC ChangeLog 2587 RMD160 beeb4291bb7107a54e89bdc2f84bf2eeeaa0da66 SHA1 539d7a7937fdad674cefe36f3073bb78e384da4b SHA256 011a4665089f72f6c58cde64e2d821d91b065b31c0dcd78de984e910d0050681
+EBUILD emacs-common-gentoo-9999.ebuild 3687 RMD160 79db03774ef827d5d578edeaab82762a8661cdf7 SHA1 14ca71c84d84fad5081284e3ae2617c97ee9bbdb SHA256 52690855f6b71eea687cc28f7639921eeeb3194c569c373b8b4a4eaf813a54f8
+MISC ChangeLog 2729 RMD160 72329dc9a2c5a4d90a85c406d6a99c84f2d3677c SHA1 54666460f2980887a0062bb168d8d9bccae521eb SHA256 589271675d4e74ed8709b73f6c4873b981f74d6e02aaaa80b949d7a8d49f8d31
 MISC metadata.xml 235 RMD160 94ec7acf062c24ce7a5c9b98fff11c2a68baf269 SHA1 c948e0bb625876a97f14834fe5848367dda93628 SHA256 81f928a2ff996d91f098bc1d718adec61bbb6afa1f8e5f1b29f0931a73902ec1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPJPUEAAoJEDxpGckxwJCBjO4P/iJzQ7E5/XmVAudPhVw3Lcrj
-kfJbVnkF0pDDw6sPGotq8fJWlHXpr/SPJGoCI/NA3bhP8nxz/idQ254/UcJQTyAj
-KOfLTYZ1wO5F5jexF9RwQrMjbjiaJf8HAZuF05MoO8rRay/8CyrwCL7TrtxE6G3Z
-ZiLRE38LIEEUlZSKvs/KdqOPWXagssooLnK2uOOj0+bIH7SxXyLbLf+aKIjusj+7
-Xi/Haz4P3+FrlMj6c+umqjRXiLaDbSUBOHyCchSF9izatypoakaqIN67WtiEtRgm
-2ZfAm0MDZ6/GSFcNUyQ+FY75neiPCaqkp9aih9BWfmuWtvHJro/X0VR1GTqne5T+
-CsPCPRgBKw6/xAkUm2LqmvEDM0EapLmyiMm/k/zdPbiuQi4M9z5Z5oyAYJw1RWCr
-TZynlJJQxqlxRyLHCeKLLoNB8DcAOcb20iehxmuzjhYdZpaY/JlgpXfdiM2E90aQ
-P8gbfahddMz76hv9ZIAFifnnLa7nN/sJidewQNkVwEnuPsTYKeMnw0zcAN+np7Wt
-h/RJeBQhfcu4f3O/jxlPw2Pak9gBxVSM8hS8ipvv+LkKyFEG5waprpxDYm69/HYq
-P2XXz00LEtmsQTdXBOroNVL0IghZmyKxk8U6vliK4aVibsu+U0qpMmSBqcVBoN/e
-1bJIoJozyqb3+5xoIbzu
-=MqPz
+iQIcBAEBAgAGBQJPJY7QAAoJEDxpGckxwJCBS90P/1f2sSMaCiBJ1dbxr+bDIJi6
+0egYaoiB9CoL4LumKdIwWeZlxJ5iIQocz4tAFg3oNIQL9QiYoV/0PbgKiWx8KKR4
+d8uAUbcKP0km2SbLFzhcEdhj2BMMC7ISX4zZyjfA7+U14OaMb9r1IpS2a//qyurw
+k5cpgUUP9qh/sK54mZx2569pDXcqAenYMn7lYwXJMJKITgm2EXBULoeVMzQ1XIZV
+WxAT7sWM8GSJe8Y7r2Ew2ZFqKdNbZEiIKJQDnjLkyfF2NwOurzQ8UhonBsP1ad/K
+W4gRZ9+I3JMLHnVv98T6whkskPkDXAW6G+dl1f3jaIv7gxJ/t6pXPOiFObc1C5BY
+wqDFNBBMZv2dRnhL11DSl0be4vwOEJkVEsLWbW3nXaZYNxSMHkYUWIiYOBQY/LkV
+Y8wCfO/SUy2jArMZVBzTrwjvKy3jFuoFkJ54m5t5XqNnuRW9hpTblqmATF819nq1
+9ZgBaHBPXfE6Ljv2cn2D4I24LuJOjpGrm3fXwWPBcUsQhsUQg3zHAm+WK2KO+W8L
+ONUCy9G8jryv93Db7kf8bzivtquCcKcyzq4sB0PyhcTfGjVopaNAuxEu1M5mseiU
+q3BIbQwkEjs1qe0Mw6eQ8Bh7XTnxbMPnh3lMuZqtDp3MBADSsXaH6NvqM+tuzxzQ
+mFtI4StqmVp1ZaPA9ftP
+=hGHZ
 -----END PGP SIGNATURE-----
