@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Jan 2012; Ulrich Müller <ulm@gentoo.org> -emacs-common-gentoo-1.3.ebuild,
+  emacs-common-gentoo-9999.ebuild:
+  Sync from Portage tree.
+
   28 Jan 2012; Ulrich Müller <ulm@gentoo.org> +emacs-common-gentoo-1.3.ebuild,
   emacs-common-gentoo-9999.ebuild:
   Remove old site-start.el file if it hasn't been modified by the user.
